--- a/Frontend/stylesheet.css
+++ b/Frontend/stylesheet.css
@@ -155,6 +155,8 @@ body, html{
 }
 
 #status_cadastrado{
+    position: relative;
+    top: 1em;
     text-align: center;
 }
 
@@ -174,6 +176,7 @@ body, html{
     padding: 2px;
     position: relative;
     width: 1em;
+    bottom: 0.5em;
     left: 100%;
 }
 
@@ -181,13 +184,14 @@ body, html{
     padding: 2px;
     position: relative;
     width: 1em;
+    bottom: 0.5em;
     left: 80%;
 }
 
 #icon_alfinete{
     position: relative;
     width: 2em;
-    bottom: 13em;
+    bottom: 13.5em;
     left: 4em;
 
 }
