--- a/Frontend/stylesheet.css
+++ b/Frontend/stylesheet.css
@@ -119,6 +119,9 @@ body, html{
 .card_cadastrado{
     display: inline-block;
     background-color: #f2f8be;
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.1em;
+    line-height: 0.8em;
     margin: 2em 2em 2em 2em;
     width: 300px;
     height: 240px;
@@ -138,12 +141,14 @@ body, html{
 }
 
 #titulo_cadastrado{
+    text-decoration: underline;
     position: relative;
     text-align: center;
     bottom: 1em;
 }
 
 #categoria_cadastrada{
+    text-align: center;
     margin-bottom: 1em;
 }
 
@@ -191,7 +196,7 @@ body, html{
 #icon_alfinete{
     position: relative;
     width: 2em;
-    bottom: 13.5em;
+    bottom: 13em;
     left: 4em;
 
 }
